l10n: Update Japanese Translations
Imported from Transifex/AICP-ja Team

Change-Id: I07f1f5d61697b46bb84a91bf8634040d9dec1bfd
Signed-off-by: lindwurm <lindwurm.q@gmail.com>

--- a/res/values-ja/aicp_strings.xml
+++ b/res/values-ja/aicp_strings.xml
@@ -44,6 +44,8 @@
     <string name="less_notification_sounds_5m">5分</string>
 
     <!-- Development Settings -->
+    <!-- Dev Options Enabled by Default -->
+    <string name="show_dev_already_enabled">開発者向けオプションはデフォルトで有効になっています。</string>
     <!-- ADB always notify -->
     <string name="adb_always_notify">デバッグ中は常に通知する</string>
     <string name="adb_always_notify_summary">デバッグが有効になっている間は接続されていなくても常に通知を表示する</string>
@@ -181,6 +183,8 @@
     <string name="pulse_custom_fudge_factor">感度レベル</string>
     <string name="lavamp_solid_speed_title">ラーヴァランプモードのアニメーション速度</string>
     <string name="pulse_solid_dimen_category">ソリッドラインの設定</string>
+    <string name="fling_lavalamp_color_from">ラーヴァランプモードの開始色</string>
+    <string name="fling_lavalamp_color_to">ラーヴァランプモードの終了色</string>
 
     <!-- Pulse config -->
     <string name="pulse_custom_dimen">バーの幅</string>
@@ -208,6 +212,9 @@
     <string name="smartbar_button_animation_summary">ボタンが押された際のアニメーションを設定します</string>
     <string name="smartbar_button_animation_ripple">リップル</string>
     <string name="smartbar_button_animation_spring">はねる</string>
+    <string name="smartbar_button_animation_pixel">Pixel（すべてのボタン）</string>
+    <string name="smartbar_button_animation_pixel_home">Pixel（ホームボタンのみ）</string>
+    <string name="smartbar_button_animation_pixel_home_ripple">Pixel（ホームボタンのみ）とリップル</string>
     <string name="qs_tile_animation_style_flip">左右に回転</string>
     <string name="smartbar_factory_reset_title">初期設定に戻す</string>
     <string name="smartbar_factory_reset_confirm">本当にナビゲーションバーを初期設定に戻しても良いですか？</string>
@@ -227,7 +234,7 @@
     <string name="smartbar_config_restore_error_toast">プロファイルのリストア中にエラーが発生しました</string>
     <string name="navbar_buttons_alpha_title">ボタンの透過度</string>
     <string name="smartbar_doubletap_sleep_title">ダブルタップしてスリープ</string>
-    <string name="smartbar_doubletap_sleep_summary">ナビバーの空きエリアをダブルタップしてディスプレイを消灯する</string>
+    <string name="smartbar_doubletap_sleep_summary">ナビバーの空きエリアをダブルタップしてディスプレイを消灯します</string>
     <string name="one_handed_mode_title">片手モード</string>
     <string name="one_handed_mode_summary">ナビゲーションバーをスワイプして片手モードを有効化できるようにします</string>
 
@@ -368,5 +375,12 @@
     <string name="night_bright_min">最低の明るさ</string>
     <string name="night_bright_low">低い明るさ</string>
     <string name="night_bright_medium">通常の明るさ</string>
+
+    <string name="magisk_title">Magisk マネージャー</string>
+    <string name="magisk_summary">Root 管理</string>
+
+    <!-- Top Level Substratum settings -->
+    <string name="substratum_title">Substratum</string>
+    <string name="substratum_summary">端末のテーマをカスタマイズします</string>
 
 </resources>
