Settings: Volume dialog timeout (2/2)
Use Slim's SeekBarPreference

Change-Id: Ibd897623193a6466185174d3e9e6bb6ce286fff2

--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -101,6 +101,10 @@
                 android:persistent="false"
                 android:ringtoneType="alarm" />
 
+        <SlimSeekBarPreference
+                android:key="volume_dialog_timeout"
+                android:title="@string/volume_dialog_timeout_title" />
+
         <!-- Other sounds -->
         <Preference
                 android:key="other_sounds"
