--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -413,4 +413,7 @@
     <string name="substratum_title">Substratum</string>
     <string name="substratum_summary">Customize device theme</string>
 
+    <!-- Volume dialog timeout -->
+    <string name="volume_dialog_timeout_title">Volume dialog timeout</string>
+
 </resources>
