--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -95,4 +95,6 @@
     <!-- If the Storage Manager settings are enabled. -->
     <bool name="config_storage_manager_settings_enabled">false</bool>
 
+    <!-- Enable/disable wifi region code preferences -->
+    <bool name="config_hideWifiRegionCode">false</bool>
 </resources>
