--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -413,8 +413,11 @@
     <string name="substratum_title">Substratum</string>
     <string name="substratum_summary">Customize device theme</string>
 
-   <!-- Force authorize substratum packages -->
-   <string name="force_authorize_substratum_packages_title">Allow theme apps from unknown sources</string>
-   <string name="force_authorize_substratum_packages_summary">Force authorize every theme app</string>
+    <!-- Force authorize substratum packages -->
+    <string name="force_authorize_substratum_packages_title">Allow theme apps from unknown sources</string>
+    <string name="force_authorize_substratum_packages_summary">Force authorize every theme app</string>
 
+    <!-- HTC Gesture settings -->
+    <string name="htc_gesture_preference_title">Touchscreen gestures</string>
+    <string name="htc_gesture_preference_summary">Perform various touchscreen gestures for quick actions</string>
 </resources>
