--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -420,4 +420,8 @@
     <!-- HTC Gesture settings -->
     <string name="htc_gesture_preference_title">Touchscreen gestures</string>
     <string name="htc_gesture_preference_summary">Perform various touchscreen gestures for quick actions</string>
+
+    <!-- In-call DND -->
+    <string name="dnd_when_call_title">In-call do not disturb</string>
+    <string name="dnd_when_call_summary">Auto enable DND during calls</string>
 </resources>
