Settings : SmartBar Button Tint [3/3]
Change-Id: I8d9ad13ca50155ae305c93b5f29a7bf84ed7fc1b
Signed-off-by: Varun Date <date.varun123@gmail.com>

--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -424,4 +424,9 @@
     <!-- In-call DND -->
     <string name="dnd_when_call_title">In-call do not disturb</string>
     <string name="dnd_when_call_summary">Auto enable DND during calls</string>
+
+    <!-- Navigation bar button color -->
+    <string name="navbar_button_tint_title">Navigation button tint</string>
+    <string name="navbar_button_tint_switch_title">Navigation button tinting</string>
+
 </resources>
