--- a/res/values/aicp_colors.xml
+++ b/res/values/aicp_colors.xml
@@ -24,7 +24,7 @@
     <color name="white">#FFF</color>
     <color name="aicp_logo_bg">@*android:color/primary_text_material_light</color>
     <color name="aicp_logo_fg">@color/icon_tint_color</color>
-    
+
     <!-- Storage Summary Title -->
     <color name="storage_summary_title_color">#ff607d8b</color>
 
@@ -85,4 +85,8 @@
     <color name="text_color_black">@android:color/black</color>
     <color name="text_color_white">@android:color/white</color>
     <color name="background_color_white">@android:color/white</color>
+
+    <!-- DSLV colors -->
+    <color name="dslv_icon_dark">#ff009688</color>
+    <color name="dslv_float_cackground_color">#ffe1e1e0</color>
 </resources>
