Settings: Set security password visible as default
We add this to control the default value of showing password in SecuritySettings

Change-Id: I752dcfcbee00c9ce4b77584222f464100e68d9a4
CRs-Fixed: 1069392

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -101,4 +101,6 @@
     <!-- Does the device allow for manual subscription provisioning? Only works for multi-sim devices,
          and currently depends on QC's proprietary telephony stack -->
     <bool name="config_enableManualSubProvisioning">true</bool>
+
+    <bool name="config_regional_security_show_password_enable">false</bool>
 </resources>
