--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -232,7 +232,7 @@
     <string name="qs_tile_animation_style_flip">Flip</string>
     <string name="smartbar_factory_reset_title">Reset to stock</string>
     <string name="smartbar_factory_reset_confirm">Are you sure you want to reset Smartbar to stock settings?</string>
-    <string name="smartbar_ime_action_title">Input method actions</string>
+    <string name="smartbar_ime_action_title">Input method and media actions</string>
     <string name="smartbar_ime_action_summary">Set what buttons to show when a on-screen keyboard is showing or music is playing</string>
     <string name="smartbar_ime_action_none">None</string>
     <string name="smartbar_ime_action_arrows">Input arrows</string>
