--- a/res/values/aicp_colors.xml
+++ b/res/values/aicp_colors.xml
@@ -89,4 +89,7 @@
     <!-- DSLV colors -->
     <color name="dslv_icon_dark">#ff009688</color>
     <color name="dslv_float_cackground_color">#ffe1e1e0</color>
+
+    <!-- Gesture settings switchbar background -->
+    <color name="gestures_switchbar_color">@android:color/white</color>
 </resources>
