Remove NightLight from Settings by default
Change-Id: Ieb8ef62e93e74cf57419a4ce09ff7682b05665df

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -103,4 +103,8 @@
     <bool name="config_enableManualSubProvisioning">true</bool>
 
     <bool name="config_regional_security_show_password_enable">false</bool>
+
+    <!-- Control whether Night display is available. This should only be enabled on devices
+         with HWC 2.0 or higher. -->
+    <bool name="config_nightDisplayAvailable">false</bool>
 </resources>
