Bluetooth: Create new catogory for earbuds
Create new catagory for TWS devices such that
only paired TWS devices will be populated under
this catagory.

CRs-fixed: 2230362
Change-Id: I6f7084c4bb319820e9d534c06adb01904b082ff9

--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -276,4 +276,7 @@
     <!-- Allow VPN to Hotspot clients -->
     <string name="tethering_allow_vpn_upstreams_title">Allow clients to use VPNs</string>
     <string name="tethering_allow_vpn_upstreams_summary">Permit hotspot clients to use this device\u2019s VPN connections for upstream connectivity</string>
+
+    <!-- Title for connected TWS device group [CHAR LIMIT=none]-->
+    <string name="connected_tws_device_saved_title">Saved Earbuds</string>
 </resources>
