--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -272,4 +272,8 @@
 
     <!-- Search keywords -->
     <string name="keywords_notification_log">notifications, notification log</string>
+
+    <!-- Allow VPN to Hotspot clients -->
+    <string name="tethering_allow_vpn_upstreams_title">Allow clients to use VPNs</string>
+    <string name="tethering_allow_vpn_upstreams_summary">Permit hotspot clients to use this device\u2019s VPN connections for upstream connectivity</string>
 </resources>
