--- a/res/xml/auto_brightness_detail.xml
+++ b/res/xml/auto_brightness_detail.xml
@@ -21,12 +21,12 @@
     android:key="auto_brightness_detail"
     android:title="@string/auto_brightness_title">
 
-    <com.android.settings.widget.VideoPreference
+    <!--<com.android.settings.widget.VideoPreference
         android:key="auto_brightness_video"
         android:title="@string/summary_placeholder"
         settings:animation="@raw/aab_brightness"
         settings:preview="@drawable/aab_brightness"
-        settings:controller="com.android.settings.widget.VideoPreferenceController"/>
+        settings:controller="com.android.settings.widget.VideoPreferenceController"/>-->
 
     <!-- Cross-listed item, if you change this, also change it in power_usage_summary.xml -->
     <com.android.settingslib.RestrictedSwitchPreference
@@ -39,4 +39,10 @@
         settings:userRestriction="no_config_brightness"
         settings:allowDividerAbove="true" />
 
+    <com.android.settings.widget.SeekBarPreference
+        android:key="auto_brightness_min"
+        android:title="@string/auto_brightness_min_title"
+        android:dependency="auto_brightness"
+        settings:keywords="@string/auto_brightness_min_title"
+        settings:controller="com.android.settings.display.AutoBrightnessMinPreferenceController" />
 </PreferenceScreen>
