[2/2] Settings: add setting for clamp min auto screen brightness
Change-Id: I275bd657ae71382be2b9000cd24e0d19e62073be

--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -281,4 +281,7 @@
 
     <!-- Title for connected TWS device group [CHAR LIMIT=none]-->
     <string name="connected_tws_device_saved_title">Saved Earbuds</string>
+
+    <string name="auto_brightness_min_title">Minimal brightness level</string>
+    <string name="auto_brightness_description_new">Your screen brightness will automatically adjust to your environment and activities.\n\nYou can adjust a minimal brightness level that will be used.</string>
 </resources>
