Navigation mode settings: Fix on small displays
Lowest settings can get hidden, and also make the "OK"-button
unreachable, so let us scroll.

TODO: somehow it does not clip how it should, overlaying the OK button.
Still better than no ok button at all.

Change-Id: I50e7bb2c4aa7faef62186c1373a8d2080dcda458

--- a/res/layout/dialog_back_gesture_options.xml
+++ b/res/layout/dialog_back_gesture_options.xml
@@ -15,12 +15,27 @@
   ~ limitations under the License
   -->
 
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clipChildren="true"
+    android:clipToPadding="true">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="12dp">
+
+    <TextView
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_weight="1"
+       android:layout_marginBottom="2dp"
+       android:layout_marginStart="12dp"
+       android:gravity="start"
+       android:text="@string/back_sensitivity_dialog_message"
+       android:textAppearance="?android:attr/textAppearance" />
 
     <SeekBar
         android:id="@+id/back_sensitivity_seekbar"
@@ -211,3 +226,4 @@
         android:textAppearance="?android:attr/textAppearance"
         style="@android:style/TextAppearance.Material.Subhead" />
 </LinearLayout>
+</ScrollView>
